--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div class="container mt-5">
+        <h1>Project By Pritesh Chopade</h1>
+        <br>
         <h2 class="text-center">PDF Watermark Remover</h2>
         <form method="POST" enctype="multipart/form-data">
             <div class="mb-3">
